fix toggle text visibility in the dark theme for all browsers

--- a/src/app/interactions/toggle/toggle-sample-1/toggle-sample-1.component.scss
+++ b/src/app/interactions/toggle/toggle-sample-1/toggle-sample-1.component.scss
@@ -22,6 +22,11 @@
     .dark-theme & {
         background-color: #111;
     }
+
+    .custom-body & {
+        color: var(--igx-surface-500-contrast);
+        background-color: var(--igx-surface-500);
+    }
 }
 
 ul {
