--- a/src/app/interactions/toggle/toggle.component.scss
+++ b/src/app/interactions/toggle/toggle.component.scss
@@ -20,4 +20,9 @@
     .dark-theme & {
         background-color: #111;
     }
+
+    .custom-body & {
+        color: var(--igx-surface-500-contrast);
+        background-color: var(--igx-surface-500);
+    }
 }
